header: fixed spacing and color

--- a/styles/header.css
+++ b/styles/header.css
@@ -14,6 +14,10 @@
 
 
 */
+
+.header-container{
+  background-color: #EEEEEE !important;
+}
 .header-row{
   height:43px;
 }
